Update Eslint  Settngs.json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,10 @@
         "indent": [
             "error",
             "tab"
-        ],
+		],
+		"no-trailing-spaces": [
+			"error"
+		],
         "linebreak-style": [
             "error",
             "windows"
