--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,8 @@
 		"msjsdiag.debugger-for-chrome",
 		"firefox-devtools.vscode-firefox-debug",
 		"humao.rest-client",
-		"eamodio.gitlens"
+		"eamodio.gitlens",
+		"pkief.material-icon-theme",
+		"hookyqr.beautify"
 	]
 }
