--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "eslint": "^7.15.0",
     "husky": "^4.3.5",
+    "lint-staged": "^10.5.3",
     "nodemon": "^2.0.6"
   }
 }
