--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^7.15.0",
     "husky": "^4.3.5",
     "lint-staged": "^10.5.3",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "prettier": "^2.2.1"
   }
 }
