--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,12 @@
 	"editor.tabSize": 4,
 	"editor.insertSpaces": false,
 	"files.eol": "\n",
-	//"editor.codeActionsOnSave": {
-	//	"source.fixAll.eslint": true
-	//},
-	//"[javascript]": {
-	//	"editor.formatOnSave": true
-	//},
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": true
+	},
+	"[javascript]": {
+		"editor.formatOnSave": true
+	},
 	"eslint.validate": [
 		"javascript",
 		"typescript",
