--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node_async",
+  "name": "express_api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,7 @@
     "test": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "jude giordano",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -28,5 +28,10 @@
     "lint-staged": "^10.5.3",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1"
+  },
+  "husky": {
+	"hooks": {
+		"pre-commit": "npm run lint"
+	}
   }
 }
