--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --fix --ext .js,.jsx .",
-    "start": "node index.js",
+	"start": "node index.js",
+	"cluster": "node cluster.js",
     "test": "nodemon index.js"
   },
   "keywords": [],
@@ -14,13 +15,15 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.3"
+    "mongodb": "^3.6.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^7.15.0",
@@ -30,8 +33,8 @@
     "prettier": "^2.2.1"
   },
   "husky": {
-	"hooks": {
-		"pre-commit": "npm run lint"
-	}
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
