--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,9 @@
 		{
 			"type": "node",
 			"request": "launch",
-			"name": "Cluster",
+			"name": "Launch Cluster",
+			"runtimeExecutable": "nodemon",
+			"restart": true,
 			"skipFiles": [
 				"<node_internals>/**"
 			],
@@ -21,6 +23,8 @@
 			"type": "node",
 			"request": "launch",
 			"name": "Launch Single Thread",
+			"runtimeExecutable": "nodemon",
+			"restart": true,
 			"skipFiles": [
 				"<node_internals>/**"
 			],
