--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.3",
+    "express-slow-down": "^1.4.0",
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
