--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
+    "mongoose": "^5.11.7",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
+    "response-time": "^2.3.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
