--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,11 @@
 	"editor.detectIndentation": false,
 	"editor.tabSize": 4,
 	"editor.insertSpaces": false,
-	"files.eol": "\n",
+	//"files.eol": "\n",
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": true
 	},
-	"[javascript]": {
+	"[typescript]": {
 		"editor.defaultFormatter": "vscode.typescript-language-features",
 		"editor.formatOnSave": true
 	},
