--- a/package.json
+++ b/package.json
@@ -1,48 +1,61 @@
 {
-  "name": "express_api",
+  "name": "express_ts",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "engines": {
-    "node": "10.x"
+    "node": "14.15.1"
   },
+  "description": "",
+  "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint --fix --ext .js,.jsx .",
-    "start": "node index.js",
-    "cluster": "node cluster.js",
-    "dev": "nodemon index.js"
+    "prebuild": "eslint --fix --ext .ts,.tsx .",
+    "postinstall": "npm run build",
+    "build": "ttsc",
+    "watch": "ttsc --watch",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "jude giordano",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
     "express-slow-down": "^1.4.0",
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.3",
     "mongoose": "^5.11.7",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.6",
+    "os": "^0.1.1",
     "response-time": "^2.3.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/compression": "^1.7.0",
+    "@types/cors": "^2.8.9",
+    "@types/express": "^4.17.9",
+    "@types/express-cluster": "0.0.0",
+    "@types/express-rate-limit": "^5.1.0",
+    "@types/express-slow-down": "^1.3.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.13",
+    "@types/response-time": "^2.3.4",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "@zerollup/ts-transform-paths": "^1.7.18",
     "eslint": "^7.15.0",
-    "husky": "^4.3.5",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1"
+    "husky": "^4.3.6",
+    "tslint": "^6.1.3",
+    "ttypescript": "^1.5.12",
+    "typescript": "^4.1.3"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "npm run build"
     }
   }
 }
