--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dateformat": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
@@ -36,6 +37,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.9",
+    "@types/dateformat": "^3.0.1",
     "@types/express": "^4.17.9",
     "@types/express-cluster": "0.0.0",
     "@types/express-rate-limit": "^5.1.0",
