--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,6 @@
 		"humao.rest-client",
 		"eamodio.gitlens",
 		"pkief.material-icon-theme",
-		"mongodb.mongodb-vscode"
+		"coenraads.bracket-pair-colorizer-2"
 	]
 }
