--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,12 +7,12 @@
 		{
 			"type": "pwa-node",
 			"request": "launch",
-			"name": "Start Multi Thread",
+			"name": "Launch Multithread",
 			"skipFiles": [
 				"<node_internals>/**"
 			],
+			"program": "${workspaceFolder}\\build\\index.js",
 			"preLaunchTask": "tsc: compile",
-			"program": "${workspaceFolder}/src/index.ts",
 			"outFiles": [
 				"${workspaceFolder}/build/**/*.js"
 			]
