--- a/package.json
+++ b/package.json
@@ -1,63 +1,65 @@
 {
-  "name": "express_ts",
+  "name": "koa-api",
   "version": "1.0.0",
   "engines": {
     "node": "14.15.1"
   },
-  "description": "",
+  "description": "testing",
   "main": "build/index.js",
   "scripts": {
     "prebuild": "eslint --fix --ext .ts,.tsx .",
     "postinstall": "npm run build",
-    "build": "ttsc",
-    "watch": "ttsc --watch",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "watch": "tsc --watch",
     "start": "node ./build/index.js"
   },
-  "keywords": [],
   "author": "jude giordano",
-  "license": "MIT",
+  "license": "ISC",
+  "keywords": [],
   "dependencies": {
     "bcrypt": "^5.0.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
+    "cluster": "^0.7.7",
     "dateformat": "^4.3.1",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-rate-limit": "^5.2.3",
-    "express-slow-down": "^1.4.0",
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.7",
-    "morgan": "^1.10.0",
-    "os": "^0.1.1",
-    "response-time": "^2.3.2",
+    "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-combine-routers": "^4.0.2",
+    "koa-compress": "^5.0.1",
+    "koa-helmet": "^6.0.0",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^3.2.1",
+    "koa-ratelimit": "^5.0.0",
+    "koa-router": "^10.0.0",
+    "mongoose": "^5.11.8",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@koa/cors": "^3.1.0",
     "@types/bcrypt": "^3.0.0",
-    "@types/compression": "^1.7.0",
-    "@types/cors": "^2.8.9",
     "@types/dateformat": "^3.0.1",
-    "@types/express": "^4.17.9",
-    "@types/express-cluster": "0.0.0",
-    "@types/express-rate-limit": "^5.1.0",
-    "@types/express-slow-down": "^1.3.0",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^14.14.13",
-    "@types/response-time": "^2.3.4",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
-    "@zerollup/ts-transform-paths": "^1.7.18",
+    "@types/koa": "^2.11.6",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-compress": "^4.0.1",
+    "@types/koa-helmet": "^6.0.1",
+    "@types/koa-json": "^2.0.18",
+    "@types/koa-logger": "^3.1.1",
+    "@types/koa-ratelimit": "^4.2.2",
+    "@types/koa-router": "^7.4.1",
+    "@types/koa__cors": "^3.0.2",
+    "@types/node": "^14.14.14",
+    "@typescript-eslint/parser": "^4.10.0",
     "eslint": "^7.15.0",
     "husky": "^4.3.6",
     "tslint": "^6.1.3",
-    "ttypescript": "^1.5.12",
     "typescript": "^4.1.3"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run build"
+      "pre-commit": "npm run postinstall"
     }
   }
 }
