--- a/package.json
+++ b/package.json
@@ -19,15 +19,13 @@
   "keywords": [],
   "dependencies": {
     "bcrypt": "^5.0.0",
-    "cluster": "^0.7.7",
     "dateformat": "^4.3.1",
     "dotenv": "^8.2.0",
-    "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
-    "koa-combine-routers": "^4.0.2",
     "koa-compress": "^5.0.1",
+    "koa-cors": "0.0.16",
     "koa-helmet": "^6.0.0",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
@@ -37,24 +35,22 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@koa/cors": "^3.1.0",
     "@types/bcrypt": "^3.0.0",
     "@types/dateformat": "^3.0.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.11.6",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-compress": "^4.0.1",
+    "@types/koa-cors": "0.0.0",
     "@types/koa-helmet": "^6.0.1",
     "@types/koa-json": "^2.0.18",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-ratelimit": "^4.2.2",
     "@types/koa-router": "^7.4.1",
-    "@types/koa__cors": "^3.0.2",
     "@types/node": "^14.14.14",
     "@typescript-eslint/parser": "^4.10.0",
     "eslint": "^7.15.0",
     "husky": "^4.3.6",
-    "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   },
   "husky": {
