--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@typescript-eslint/parser": "^4.10.0",
     "eslint": "^7.15.0",
     "husky": "^4.3.6",
+    "loadtest": "^5.1.2",
     "typescript": "^4.1.3"
   },
   "husky": {
